# Cascade

./: .gitignore  CMakeLists.txt  README.md  acb_ode.c  acb_ode.h  cascade.c  cascade.h  install.sh  juliaInterface.c  juliaInterface.h  make.bat  monodromy.c  monodromy.h  recursion.c  recursion.h
doc/: Makefile
doc/source/: acb_ode.rst  acb_ode_solution.rst  cascade.rst  conf.py  diffeq.rst  index.rst  jade.rst
julia/: Jade.jl  arith.jl  examples.jl  jade.jl  monodromy.jl
src/: acb_ode.c  acb_ode.h  acb_ode_solution.c  cascade.c  cascade.h  examples.c  examples.h  frobenius_solver.c  fuchs_solver.c  juliaInterface.c  juliaInterface.h  solver_frobenius.c  solver_fuchs.c
tests/: CMakeLists.txt  bessel.c  frobenius.c  frobenius_solver.c  fuchs_solver.c  graeffe.c  hypgeom.c  indicial_polynomial.c  legendre.c  power_series.c  power_series_frobenius.c  power_series_fuchs.c  power_series_singleton.c  radius.c  reduce.c  singleton_frobenius.c  singleton_frobenius_solver.c  solution_eval.c  solution_extend.c  solution_update.c  solve_frobenius_singleton.c  solve_fuchs.c
